# northh

./: .config  .gitignore  README.md  main.py  pyproject.toml
docs/: philosophy.md  stt.md  user_flows.md
scripts/: gen_demo.py  test_stt_live.py
src/easter/: __init__.py  engine.py  screen.py  sprites.py
src/functions/: __init__.py  ai.py  core.py  editor.py  init.py  list.py  settings.py  sketch.py  stt.py
src/ui/: app.py  messages.py
src/ui/screens/: browser.py  capture.py  conflict.py  help.py  home.py  new_entry.py  spaceship.py
tests/: conftest.py  test_ai.py  test_core.py  test_flows.py  test_init.py  test_list.py  test_main.py  test_spaceship.py  test_stt.py  test_ui.py
